Fixe the overlapping

--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -32,7 +32,9 @@
     .page-title {
         .font-size(62px);
     }
-
+[lang='ar'] .page-head, .page-title {
+	line-height:1.5em;
+}
     .intro {
         .font-size(@largeFontSize);
         margin: 0 @gridColumnWidth 1.5em;
